@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
 #
 
+2005-12-03 18:50:53 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-89
+
+    Summary:
+      cms, fix rename (#150)
+    Revision:
+      itools--main--0.12--patch-89
+
+
+    modified files:
+     Changelog cms/Folder.py cms/ui/Folder_rename.xml.en
+
+
 2005-12-02 15:20:01 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-88
 
     Summary:
